# CCB

./: HEADER  INSTALL  LICENSE  Makefile  README.md  license
src/: Depend.sh  Make.sh  Makefile  Makefile.lib  Makefile.package  Makefile.package.settings  Makefile.shlib  atom.cpp  atom.h  backbone.cpp  backbone.h  backbone_coiledcoil.cpp  backbone_coiledcoil.h  backbonehandler.cpp  backbonehandler.h  bitmask.cpp  bitmask.h  ccb.cpp  ccb.h  ccb_compass.h  ccbio.cpp  ccbio.h  ccbtype.h  constants.h  domain.cpp  domain.h  error.cpp  error.h  group.cpp  group.h  main.cpp  math_extra.cpp  math_extra.h  memory.cpp  memory.h  output.cpp  output.h  output_pdb.cpp  output_pdb.h  plugin_baseclass.cpp  (+16 more)
src/MAKE/: Makefile.base  Makefile.cabal  Makefile.linux64  Makefile.mingw32-cross  Makefile.mingw64-cross  Makefile.osx32  Makefile.osx32-clang  Makefile.osx32-gcc  Makefile.osx64  Makefile.osx64-clang  Makefile.osx64-gcc  Makefile.ubuntu64  Makefile.vmd
src/USER-COILEDCOIL/: Install.sh  Package.sh  backbone_coiledcoil.cpp  backbone_coiledcoil.h
src/USER-COMPASS/: Install.sh  base_class.cpp  base_class.h  ccb_compass.cpp  ccb_compass.h  plugin.h  plugin_baseclass.cpp  plugin_baseclass.h
src/USER-TCL/: Install.sh  Package.sh  pkgIndex.tcl  tcl_ccb.cpp
src/USER-VMD/: Install.sh  README  pkgIndex.tcl  vmd_ccb.cpp
tcl/: crick.tcl  crick_params.tcl  ensemble_example.tcl  license
tcl/ccb/: ccbtools.tcl
tcl/ccbtools/: Makefile  ccbtools.tcl  pkgIndex.tcl
tcl/crick/: Makefile  crick.tcl  pkgIndex.tcl
tcl/examples/: crick_params.tcl  ensemble_example.tcl
tcl/fithelix/: fithelix.tcl  pkgIndex.tcl
tcl/minimize/: .rsync-ignore  Makefile  minimize.tcl  pkgIndex.tcl
