# cabal  = Optimized compiler options, c++

SHELL = /bin/sh

# ---------------------------------------------------------------------
# compiler/linker settings
# specify flags and libraries needed for your compiler

OPENMP= -fopenmp

CC =		c++ $(OPENMP) 
CCFLAGS =	-O2 -fomit-frame-pointer -fno-rtti -fno-exceptions -g \
			-march=native -ffast-math -mpc64 -finline-functions \
			-funroll-loops -fstrict-aliasing -Wall -W -Wno-uninitialized
DEPFLAGS =      -M
LINK =		c++ $(OPENMP) 
LINKFLAGS =	-O -g -mpc64 -fno-exceptions
LIB =           -lstdc++ -lm -lgfortran -lgomp -lrt
SIZE =		size

# ---------------------------------------------------------------------
# SCADS-specific settings
# specify settings for SCADS features you will use
# if you change any -D setting, do full re-compile after "make clean"

# SCADS ifdef settings, OPTIONAL, include -D

SCADS_INC = -DSCADS_MEMALIGN=16 
#SCADS_INC =

# ---------------------------------------------------------------------
# build rules and dependencies
# no need to edit this section

include	Makefile.package.settings
include	Makefile.package

EXTRA_INC = $(SCADS_INC) $(PKG_INC) $(PKG_SYSINC)
EXTRA_PATH = $(PKG_PATH) $(PKG_SYSPATH)
EXTRA_LIB =  $(PKG_LIB) $(PKG_SYSLIB)

# Link target

$(EXE):	$(OBJ)
	$(LINK) $(LINKFLAGS) $(EXTRA_PATH) $(OBJ) $(EXTRA_LIB) $(LIB) -o $(EXE)
	$(SIZE) $(EXE)

# Compilation rules

%.o:%.cpp
	$(CC) $(CCFLAGS) $(EXTRA_INC) -c $<

%.d:%.cpp
	$(CC) $(CCFLAGS) $(EXTRA_INC) $(DEPFLAGS) $< > $@

# Individual dependencies

DEPENDS = $(OBJ:.o=.d)
sinclude $(DEPENDS)
