# cabal  = Optimized compiler options, c++

SHELL = /bin/sh

# ---------------------------------------------------------------------
# compiler/linker settings
# specify flags and libraries needed for your compiler

CC =		g++
CCFLAGS =	-O2 -fomit-frame-pointer -fno-rtti -fno-exceptions -g \
			-march=native -ffast-math -mpc64 -finline-functions \
			-funroll-loops -fstrict-aliasing -Wall -W -Wno-uninitialized
SHFLAGS =       -fPIC
DEPFLAGS =      -M

LINK =		g++
LINKFLAGS =	-O -g -mpc64 -fno-exceptions
LIB =           -lstdc++ -lm
SIZE =		size

ARCHIVE =       ar
ARFLAGS =       -rc
SHLIBFLAGS =    -shared

# ---------------------------------------------------------------------
# SCADS-specific settings
# specify settings for SCADS features you will use
# if you change any -D setting, do full re-compile after "make clean"

# SCADS ifdef settings, OPTIONAL, include -D

SCADS_INC = -DSCADS_MEMALIGN=16 
#SCADS_INC =

# TCL library, required
# INC = 
# PATH = 
# LIB = 

TCL_INC =  -I/usr/include
TCL_PATH = -L/usr/lib64
TCL_LIB =  -ltcl8.5

# ---------------------------------------------------------------------
# build rules and dependencies
# no need to edit this section

include	Makefile.package.settings
include	Makefile.package

EXTRA_INC = $(SCADS_INC) $(PKG_INC) $(TCL_INC) $(PKG_SYSINC)
EXTRA_PATH = $(PKG_PATH) $(TCL_PATH) $(PKG_SYSPATH)
EXTRA_LIB =  $(PKG_LIB) $(TCL_LIB) $(PKG_SYSLIB)

# Link target

$(EXE):	$(OBJ)
	$(LINK) $(LINKFLAGS) $(EXTRA_PATH) $(OBJ) $(EXTRA_LIB) $(LIB) -o $(EXE)
	$(SIZE) $(EXE)

# Library targets

lib:    $(OBJ)
	$(ARCHIVE) $(ARFLAGS) $(EXE) $(OBJ)

shlib:  $(OBJ)
	$(CC) $(CCFLAGS) $(SHFLAGS) $(SHLIBFLAGS) $(EXTRA_PATH) -o $(EXE) \
	$(OBJ) $(EXTRA_LIB) $(LIB)

# Compilation rules

%.o:%.cpp
	$(CC) $(CCFLAGS) $(SHFLAGS) $(EXTRA_INC) -c $<

%.d:%.cpp
	$(CC) $(CCFLAGS) $(EXTRA_INC) $(DEPFLAGS) $< > $@

# Individual dependencies

DEPENDS = $(OBJ:.o=.d)
sinclude $(DEPENDS)
